--- a/VolleyballScoreSheet/App.xaml
+++ b/VolleyballScoreSheet/App.xaml
@@ -1,8 +1,8 @@
-﻿<prism:PrismApplication x:Class="BasicRegionNavigation.App"
+﻿<prism:PrismApplication x:Class="VolleyballScoreSheet.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"
-             xmlns:local="clr-namespace:BasicRegionNavigation">
+             xmlns:local="clr-namespace:VolleyballScoreSheet">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
