--- a/VolleyballScoreSheet/Views/BeforeMatch.xaml
+++ b/VolleyballScoreSheet/Views/BeforeMatch.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="BasicRegionNavigation.Views.BeforeMatch"
+﻿<UserControl x:Class="VolleyballScoreSheet.Views.BeforeMatch"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:prism="http://prismlibrary.com/"
       xmlns:wpfui="clr-namespace:WPFUI.Controls;assembly=WPFUI"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:local="clr-namespace:BasicRegionNavigation.Views"
+      xmlns:local="clr-namespace:VolleyballScoreSheet.Views"
       prism:ViewModelLocator.AutoWireViewModel="True">
 
     <StackPanel>
