--- a/VolleyballScoreSheet/Views/DialogWindow.xaml
+++ b/VolleyballScoreSheet/Views/DialogWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="BasicRegionNavigation.Views.DialogWindow"
+﻿<Window x:Class="VolleyballScoreSheet.Views.DialogWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:prism="http://prismlibrary.com/"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BasicRegionNavigation.Views"
+        xmlns:local="clr-namespace:VolleyballScoreSheet.Views"
         xmlns:wpfui="clr-namespace:WPFUI.Controls;assembly=WPFUI"
         prism:ViewModelLocator.AutoWireViewModel="True"
         Style="{StaticResource UiWindowRounded}"
