--- a/VolleyballScoreSheet/Views/RosterB.xaml
+++ b/VolleyballScoreSheet/Views/RosterB.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="BasicRegionNavigation.Views.RosterB"
+﻿<UserControl x:Class="VolleyballScoreSheet.Views.RosterB"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:prism="http://prismlibrary.com/"   
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:local="clr-namespace:BasicRegionNavigation.Views"
+      xmlns:local="clr-namespace:VolleyballScoreSheet.Views"
       xmlns:wpfui="clr-namespace:WPFUI.Controls;assembly=WPFUI"
       prism:ViewModelLocator.AutoWireViewModel="True">
 
