--- a/VolleyballScoreSheet/Views/AlertWindow.xaml
+++ b/VolleyballScoreSheet/Views/AlertWindow.xaml
@@ -1,15 +1,20 @@
-﻿<Window x:Class="VolleyballScoreSheet.Views.DialogWindow"
+﻿<Window x:Class="VolleyballScoreSheet.Views.AlertWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:prism="http://prismlibrary.com/"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:VolleyballScoreSheet.Views"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:wpfui="clr-namespace:WPFUI.Controls;assembly=WPFUI"
         prism:ViewModelLocator.AutoWireViewModel="True"
-        Style="{StaticResource UiWindowRounded}"
+        Width="400"
+        Style="{StaticResource UiWindow}"
+        ResizeMode="NoResize"
+        MinHeight="0"
         WindowStartupLocation="CenterOwner"
-        Title="DialogWindow" Height="600" Width="800">
-    <StackPanel>
-    </StackPanel>
+        MinWidth="0"
+        SizeToContent="WidthAndHeight">
+        
+    <Grid>
+        
+    </Grid>
 </Window>
