--- a/VolleyballScoreSheet/Views/Gaming.xaml
+++ b/VolleyballScoreSheet/Views/Gaming.xaml
@@ -76,12 +76,15 @@
                         <RowDefinition></RowDefinition>
                         <RowDefinition></RowDefinition>
                     </Grid.RowDefinitions>
-                    <TextBlock TextAlignment="Center" FontSize="50" Grid.Row="2" Grid.Column="0" Text="{Binding LeftSideLotation.Value[0]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" Grid.Row="2" Grid.Column="1" Text="{Binding LeftSideLotation.Value[1]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" Grid.Row="1" Grid.Column="1" Text="{Binding LeftSideLotation.Value[2]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" Grid.Row="0" Grid.Column="1" Text="{Binding LeftSideLotation.Value[3]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" Grid.Row="0" Grid.Column="0" Text="{Binding LeftSideLotation.Value[4]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" Grid.Row="1" Grid.Column="0" Text="{Binding LeftSideLotation.Value[5]}"></TextBlock>
+
+                    <Ellipse Opacity="{Binding LeftServeBallOpacity.Value}" Grid.Column="0" Grid.Row="2" Height="30" Width="30" Fill="Yellow" HorizontalAlignment="Left"></Ellipse>
+                    
+                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="2" Grid.Column="0" Text="{Binding LeftSideLotation.Value[0]}"></TextBlock>
+                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1" Text="{Binding LeftSideLotation.Value[1]}"></TextBlock>
+                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="1" Grid.Column="1" Text="{Binding LeftSideLotation.Value[2]}"></TextBlock>
+                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1" Text="{Binding LeftSideLotation.Value[3]}"></TextBlock>
+                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0" Text="{Binding LeftSideLotation.Value[4]}"></TextBlock>
+                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0" Text="{Binding LeftSideLotation.Value[5]}"></TextBlock>
                 </Grid>
                 <Grid Grid.Row="1" Grid.Column="3" Background="DarkOrange">
                     <Grid.ColumnDefinitions>
@@ -93,12 +96,13 @@
                         <RowDefinition></RowDefinition>
                         <RowDefinition></RowDefinition>
                     </Grid.RowDefinitions>
-                    <TextBlock TextAlignment="Center" FontSize="50" Grid.Row="0" Grid.Column="1" Text="{Binding RightSideLotation.Value[0]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" Grid.Row="0" Grid.Column="0" Text="{Binding RightSideLotation.Value[1]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" Grid.Row="1" Grid.Column="0" Text="{Binding RightSideLotation.Value[2]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" Grid.Row="2" Grid.Column="0" Text="{Binding RightSideLotation.Value[3]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" Grid.Row="2" Grid.Column="1" Text="{Binding RightSideLotation.Value[4]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" Grid.Row="1" Grid.Column="1" Text="{Binding RightSideLotation.Value[5]}"></TextBlock>
+                    <Ellipse Opacity="{Binding RightServeBallOpacity.Value}" Grid.Column="1" Grid.Row="0" Height="30" Width="30" Fill="Yellow" HorizontalAlignment="Right"></Ellipse>
+                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1" Text="{Binding RightSideLotation.Value[0]}"></TextBlock>
+                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0" Text="{Binding RightSideLotation.Value[1]}"></TextBlock>
+                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0" Text="{Binding RightSideLotation.Value[2]}"></TextBlock>
+                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="2" Grid.Column="0" Text="{Binding RightSideLotation.Value[3]}"></TextBlock>
+                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1" Text="{Binding RightSideLotation.Value[4]}"></TextBlock>
+                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="1" Grid.Column="1" Text="{Binding RightSideLotation.Value[5]}"></TextBlock>
                 </Grid>
             </Grid>
         </Grid>
@@ -118,6 +122,13 @@
             <Button Margin="5" Grid.Column="0" Command="{Binding LeftSideTimeOutCommand}" Content="{Binding LeftSideTimeOutDispley.Value}"></Button>
             <Button Margin="5" Grid.Column="1" Command="{Binding RightSideTimeOutCommand}" Content="{Binding RightSideTimeOutDispley.Value}"></Button>
         </Grid>
-        <Button Content="メンバー登録" Command="{Binding MemberRegistrationCommand}"></Button>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Button Margin="5" Grid.Column="0" Command="{Binding LeftSideSubstitutionCommand}" Content="{Binding LeftSideSubstitutionDisplay.Value}"></Button>
+            <Button Margin="5" Grid.Column="1" Command="{Binding RightSideSubstitutionCommand}" Content="{Binding RightSideSubstitutionDisplay.Value}"></Button>
+        </Grid>
     </StackPanel>
 </UserControl>
