--- a/VolleyballScoreSheet/Views/MainWindow.xaml
+++ b/VolleyballScoreSheet/Views/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:prism="http://prismlibrary.com/"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-        xmlns:wpfui="clr-namespace:WPFUI.Controls;assembly=WPFUI"
+        xmlns:wpfui="clr-namespace:WPFUI.Controls;assembly=WPFUI" xmlns:rp="clr-namespace:Reactive.Bindings.Interactivity;assembly=ReactiveProperty.WPF"
         prism:ViewModelLocator.AutoWireViewModel="True"
         Style="{StaticResource UiWindowRounded}"
         SizeToContent="Height"
