--- a/VolleyballScoreSheet/Views/Substitution.xaml
+++ b/VolleyballScoreSheet/Views/Substitution.xaml
@@ -5,12 +5,22 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:VolleyballScoreSheet.Views"
              xmlns:prism="http://prismlibrary.com/"
-             xmlns:wpfui="clr-namespace:WPFUI.Controls;assembly=WPFUI">
+             xmlns:wpfui="clr-namespace:WPFUI.Controls;assembly=WPFUI"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors" 
+             xmlns:rp="clr-namespace:Reactive.Bindings.Interactivity;assembly=ReactiveProperty.WPF"
+             Height="300"
+             Width="500">
     
     <StackPanel Margin="10">
         <Label>Substitution</Label>
         <TextBlock Margin="5" FontSize="20" Text="{Binding TeamName.Value}"></TextBlock>
-        <ComboBox ItemsSource="{Binding OnCourtMemberItem.Value}" Margin="5" SelectedItem="{Binding OutMember}"></ComboBox>
+        <ComboBox ItemsSource="{Binding OnCourtMemberItem.Value}" Margin="5" SelectedItem="{Binding OutMember}">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="SelectionChanged">
+                    <rp:EventToReactiveCommand Command="{Binding SelectionChangedCommand}"></rp:EventToReactiveCommand>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </ComboBox>
         <Label HorizontalAlignment="Center" FontSize="40" FontWeight="ExtraBold">↓</Label>
         <ComboBox Margin="5" ItemsSource="{Binding OutCourtMemberItem.Value}" SelectedValue="{Binding InMember}"></ComboBox>
         <Button Content="キャンセル" Margin="5" Command="{Binding CancelCommand}"></Button>
