--- a/VolleyballScoreSheet/App.xaml
+++ b/VolleyballScoreSheet/App.xaml
@@ -1,15 +1,9 @@
-﻿<prism:PrismApplication x:Class="VolleyballScoreSheet.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"
-             xmlns:local="clr-namespace:VolleyballScoreSheet">
-    <Application.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/WPFUI;component/Styles/Theme/Dark.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/WPFUI;component/Styles/WPFUI.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Application.Resources>
+﻿<prism:PrismApplication
+    x:Class="VolleyballScoreSheet.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:VolleyballScoreSheet"
+    xmlns:prism="http://prismlibrary.com/">
+    <Application.Resources />
 </prism:PrismApplication>
-   
+
