--- a/VolleyballScoreSheet/Views/AlertWindow.xaml
+++ b/VolleyballScoreSheet/Views/AlertWindow.xaml
@@ -4,9 +4,8 @@
         xmlns:prism="http://prismlibrary.com/"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-        xmlns:wpfui="clr-namespace:WPFUI.Controls;assembly=WPFUI"
+        xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
         prism:ViewModelLocator.AutoWireViewModel="True"
-        Style="{StaticResource UiWindow}"
         MinHeight="0"
         WindowStartupLocation="CenterOwner"
         MinWidth="0"
