--- a/VolleyballScoreSheet/Views/BeforeMatch.xaml
+++ b/VolleyballScoreSheet/Views/BeforeMatch.xaml
@@ -1,111 +1,279 @@
-﻿<UserControl x:Class="VolleyballScoreSheet.Views.BeforeMatch"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:prism="http://prismlibrary.com/"
-      xmlns:wpfui="clr-namespace:WPFUI.Controls;assembly=WPFUI"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:local="clr-namespace:VolleyballScoreSheet.Views"
-      prism:ViewModelLocator.AutoWireViewModel="True">
+﻿<UserControl
+    x:Class="VolleyballScoreSheet.Views.BeforeMatch"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:VolleyballScoreSheet.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:prism="http://prismlibrary.com/"
+    xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
+    prism:ViewModelLocator.AutoWireViewModel="True">
 
     <StackPanel>
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
+                <RowDefinition />
+                <RowDefinition />
             </Grid.RowDefinitions>
-            <TextBlock Margin="15,5,5,5" FontSize="40" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" VerticalAlignment="Center" TextAlignment="Left" Text="{Binding LeftSideTeamName.Value}"></TextBlock>
-            <TextBlock Margin="5,5,15,5" FontSize="40" Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="2" VerticalAlignment="Center" TextAlignment="Right" Text="{Binding RightSideTeamName.Value}"></TextBlock>
-            <TextBlock Margin="5,5,15,5" FontSize="30" Grid.Column="2" Grid.Row="0" VerticalAlignment="Center" TextAlignment="Center" Text="{Binding Set.Value}"></TextBlock>
+            <TextBlock
+                Grid.Row="0"
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                Margin="15,5,5,5"
+                VerticalAlignment="Center"
+                FontSize="40"
+                Text="{Binding LeftSideTeamName.Value}"
+                TextAlignment="Left" />
+            <TextBlock
+                Grid.Row="0"
+                Grid.Column="3"
+                Grid.ColumnSpan="2"
+                Margin="5,5,15,5"
+                VerticalAlignment="Center"
+                FontSize="40"
+                Text="{Binding RightSideTeamName.Value}"
+                TextAlignment="Right" />
+            <TextBlock
+                Grid.Row="0"
+                Grid.Column="2"
+                Margin="5,5,15,5"
+                VerticalAlignment="Center"
+                FontSize="30"
+                Text="{Binding Set.Value}"
+                TextAlignment="Center" />
 
-            <TextBlock Margin="15,5,5,5" FontSize="30" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" TextAlignment="Left" Text="{Binding LeftSidePoints.Value}"></TextBlock>
-            <TextBlock Margin="5,5,5,5" FontSize="30" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" TextAlignment="Center" Text="{Binding LeftSideSets.Value}"></TextBlock>
-            <TextBlock Margin="5,5,5,5" FontSize="30" Grid.Column="2" Grid.Row="1" VerticalAlignment="Center" TextAlignment="Center" Text="16:10:11"></TextBlock>
-            <TextBlock Margin="5,5,5,5" FontSize="30" Grid.Column="3" Grid.Row="1" VerticalAlignment="Center" TextAlignment="Center" Text="{Binding RightSideSets.Value}"></TextBlock>
-            <TextBlock Margin="5,5,15,5" FontSize="30" Grid.Column="4" Grid.Row="1" VerticalAlignment="Center" TextAlignment="Right" Text="{Binding RightSidePoints.Value}"></TextBlock>
+            <TextBlock
+                Grid.Row="1"
+                Grid.Column="0"
+                Margin="15,5,5,5"
+                VerticalAlignment="Center"
+                FontSize="30"
+                Text="{Binding LeftSidePoints.Value}"
+                TextAlignment="Left" />
+            <TextBlock
+                Grid.Row="1"
+                Grid.Column="1"
+                Margin="5,5,5,5"
+                VerticalAlignment="Center"
+                FontSize="30"
+                Text="{Binding LeftSideSets.Value}"
+                TextAlignment="Center" />
+            <TextBlock
+                Grid.Row="1"
+                Grid.Column="2"
+                Margin="5,5,5,5"
+                VerticalAlignment="Center"
+                FontSize="30"
+                Text="16:10:11"
+                TextAlignment="Center" />
+            <TextBlock
+                Grid.Row="1"
+                Grid.Column="3"
+                Margin="5,5,5,5"
+                VerticalAlignment="Center"
+                FontSize="30"
+                Text="{Binding RightSideSets.Value}"
+                TextAlignment="Center" />
+            <TextBlock
+                Grid.Row="1"
+                Grid.Column="4"
+                Margin="5,5,15,5"
+                VerticalAlignment="Center"
+                FontSize="30"
+                Text="{Binding RightSidePoints.Value}"
+                TextAlignment="Right" />
         </Grid>
 
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
+                <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*"></ColumnDefinition>
-                <ColumnDefinition Width="5*"></ColumnDefinition>
-                <ColumnDefinition Width="2*"></ColumnDefinition>
+                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="5*" />
+                <ColumnDefinition Width="2*" />
             </Grid.ColumnDefinitions>
 
 
-            <DataGrid Margin="5" Grid.Column="0" ItemsSource="{Binding LeftTeamPlayer.Value}" IsReadOnly="True"></DataGrid>
-            <DataGrid Margin="5" Grid.Column="2" ItemsSource="{Binding RightTeamPlayer.Value}" IsReadOnly="True" ></DataGrid>
-            
-            
-            <Grid Margin="5" Grid.Column="1" Height="300">
+            <DataGrid
+                Grid.Column="0"
+                Margin="5"
+                IsReadOnly="True"
+                ItemsSource="{Binding LeftTeamPlayer.Value}" />
+            <DataGrid
+                Grid.Column="2"
+                Margin="5"
+                IsReadOnly="True"
+                ItemsSource="{Binding RightTeamPlayer.Value}" />
+
+
+            <Grid
+                Grid.Column="1"
+                Height="300"
+                Margin="5">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="10"></ColumnDefinition>
-                    <ColumnDefinition ></ColumnDefinition>
-                    <ColumnDefinition Width="10"></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition Width="10"></ColumnDefinition>
+                    <ColumnDefinition Width="10" />
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="10" />
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="10" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="10"></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition Height="10"></RowDefinition>
+                    <RowDefinition Height="10" />
+                    <RowDefinition />
+                    <RowDefinition Height="10" />
                 </Grid.RowDefinitions>
 
-                <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5" Background="White"></Grid>
-                <Grid Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="5" Background="White"></Grid>
-                <Grid Grid.Row="1" Grid.Column="0" Background="White"></Grid>
-                <Grid Grid.Row="1" Grid.Column="2" Background="White"></Grid>
-                <Grid Grid.Row="1" Grid.Column="4" Background="White"></Grid>
+                <Grid
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="5"
+                    Background="White" />
+                <Grid
+                    Grid.Row="5"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="5"
+                    Background="White" />
+                <Grid
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Background="White" />
+                <Grid
+                    Grid.Row="1"
+                    Grid.Column="2"
+                    Background="White" />
+                <Grid
+                    Grid.Row="1"
+                    Grid.Column="4"
+                    Background="White" />
 
-                <Grid Grid.Row="1" Grid.Column="1" Background="DarkOrange">
+                <Grid
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Background="DarkOrange">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
                     </Grid.RowDefinitions>
-                    <Ellipse Opacity="{Binding LeftServeBallOpacity.Value}" Grid.Column="0" Grid.Row="2" Height="30" Width="30" Fill="Yellow" HorizontalAlignment="Left"></Ellipse>
-                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="2" Grid.Column="0" Text="{Binding LeftSideLotation.Value[0]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1" Text="{Binding LeftSideLotation.Value[1]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="1" Grid.Column="1" Text="{Binding LeftSideLotation.Value[2]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1" Text="{Binding LeftSideLotation.Value[3]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0" Text="{Binding LeftSideLotation.Value[4]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0" Text="{Binding LeftSideLotation.Value[5]}"></TextBlock>
+                    <TextBlock
+                        Grid.Row="2"
+                        Grid.Column="0"
+                        VerticalAlignment="Center"
+                        FontSize="50"
+                        Text="{Binding LeftSideRotation.Value[0]}"
+                        TextAlignment="Center" />
+                    <TextBlock
+                        Grid.Row="2"
+                        Grid.Column="1"
+                        VerticalAlignment="Center"
+                        FontSize="50"
+                        Text="{Binding LeftSideRotation.Value[1]}"
+                        TextAlignment="Center" />
+                    <TextBlock
+                        Grid.Row="1"
+                        Grid.Column="1"
+                        VerticalAlignment="Center"
+                        FontSize="50"
+                        Text="{Binding LeftSideRotation.Value[2]}"
+                        TextAlignment="Center" />
+                    <TextBlock
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        VerticalAlignment="Center"
+                        FontSize="50"
+                        Text="{Binding LeftSideRotation.Value[3]}"
+                        TextAlignment="Center" />
+                    <TextBlock
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        VerticalAlignment="Center"
+                        FontSize="50"
+                        Text="{Binding LeftSideRotation.Value[4]}"
+                        TextAlignment="Center" />
+                    <TextBlock
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        VerticalAlignment="Center"
+                        FontSize="50"
+                        Text="{Binding LeftSideRotation.Value[5]}"
+                        TextAlignment="Center" />
                 </Grid>
-                <Grid Grid.Row="1" Grid.Column="3" Background="DarkOrange">
+                <Grid
+                    Grid.Row="1"
+                    Grid.Column="3"
+                    Background="DarkOrange">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
                     </Grid.RowDefinitions>
-                    <Ellipse Opacity="{Binding RightServeBallOpacity.Value}" Grid.Column="1" Grid.Row="0" Height="30" Width="30" Fill="Yellow" HorizontalAlignment="Right"></Ellipse>
-                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1" Text="{Binding RightSideLotation.Value[0]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0" Text="{Binding RightSideLotation.Value[1]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0" Text="{Binding RightSideLotation.Value[2]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="2" Grid.Column="0" Text="{Binding RightSideLotation.Value[3]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1" Text="{Binding RightSideLotation.Value[4]}"></TextBlock>
-                    <TextBlock TextAlignment="Center" FontSize="50" VerticalAlignment="Center" Grid.Row="1" Grid.Column="1" Text="{Binding RightSideLotation.Value[5]}"></TextBlock>
+                    <TextBlock
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        VerticalAlignment="Center"
+                        FontSize="50"
+                        Text="{Binding RightSideRotation.Value[0]}"
+                        TextAlignment="Center" />
+                    <TextBlock
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        VerticalAlignment="Center"
+                        FontSize="50"
+                        Text="{Binding RightSideRotation.Value[1]}"
+                        TextAlignment="Center" />
+                    <TextBlock
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        VerticalAlignment="Center"
+                        FontSize="50"
+                        Text="{Binding RightSideRotation.Value[2]}"
+                        TextAlignment="Center" />
+                    <TextBlock
+                        Grid.Row="2"
+                        Grid.Column="0"
+                        VerticalAlignment="Center"
+                        FontSize="50"
+                        Text="{Binding RightSideRotation.Value[3]}"
+                        TextAlignment="Center" />
+                    <TextBlock
+                        Grid.Row="2"
+                        Grid.Column="1"
+                        VerticalAlignment="Center"
+                        FontSize="50"
+                        Text="{Binding RightSideRotation.Value[4]}"
+                        TextAlignment="Center" />
+                    <TextBlock
+                        Grid.Row="1"
+                        Grid.Column="1"
+                        VerticalAlignment="Center"
+                        FontSize="50"
+                        Text="{Binding RightSideRotation.Value[5]}"
+                        TextAlignment="Center" />
                 </Grid>
             </Grid>
 
         </Grid>
 
-        <Button Content="Line UP" Margin="5,20,5,5" FontSize="30" Height="80" Command="{Binding LineUpCommand}"></Button>
+        <Button
+            Height="80"
+            Margin="5,20,5,5"
+            Command="{Binding LineUpCommand}"
+            Content="Line UP"
+            FontSize="30" />
     </StackPanel>
 </UserControl>
