--- a/VolleyballScoreSheet/Views/NotificationDialog.xaml
+++ b/VolleyballScoreSheet/Views/NotificationDialog.xaml
@@ -5,7 +5,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:VolleyballScoreSheet.Views"
-             xmlns:wpfui="clr-namespace:WPFUI.Controls;assembly=WPFUI"
+             xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
              prism:ViewModelLocator.AutoWireViewModel="True">
 
     <StackPanel>
