--- a/VolleyballScoreSheet/Views/RosterB.xaml
+++ b/VolleyballScoreSheet/Views/RosterB.xaml
@@ -1,44 +1,79 @@
-﻿<UserControl x:Class="VolleyballScoreSheet.Views.RosterB"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:prism="http://prismlibrary.com/"   
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:local="clr-namespace:VolleyballScoreSheet.Views"
-      xmlns:wpfui="clr-namespace:WPFUI.Controls;assembly=WPFUI"
-      prism:ViewModelLocator.AutoWireViewModel="True">
+﻿<UserControl
+    x:Class="VolleyballScoreSheet.Views.RosterB"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:VolleyballScoreSheet.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:prism="http://prismlibrary.com/"
+    prism:ViewModelLocator.AutoWireViewModel="True">
 
     <StackPanel>
-        <TextBlock Margin="5,0,5,10" FontSize="30" Text="{Binding Team.Value}"></TextBlock>
-        <DataGrid Margin="5,0,5,10" ItemsSource="{Binding PlayerDataTable.Value}"></DataGrid>
+        <TextBlock
+            Margin="5,0,5,10"
+            FontSize="30"
+            Text="{Binding BTeamName.Value}" />
+        <DataGrid Margin="5,0,5,10" ItemsSource="{Binding PlayerDataTable.Value}" />
 
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="3*"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="3*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
             <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
+                <RowDefinition />
+                <RowDefinition />
             </Grid.RowDefinitions>
 
-            <Label Grid.Row="0" Grid.Column="0" Margin="5,0,5,0">Number</Label>
-            <wpfui:NumberBox  Grid.Row="1" Margin="5,0,5,0" Text="{Binding Id.Value}"></wpfui:NumberBox>
+            <Label
+                Grid.Row="0"
+                Grid.Column="0"
+                Margin="5,0,5,0">
+                Number
+            </Label>
+            <TextBox
+                Grid.Row="1"
+                Margin="5,0,5,0"
+                Text="{Binding Id.Value}" />
 
-            <Label Grid.Row="0" Grid.Column="1" Margin="5,0,5,0">Name</Label>
-            <TextBox Grid.Row="1" Grid.Column="1" Margin="5,0,5,0" Text="{Binding PlayerName.Value}"></TextBox>
+            <Label
+                Grid.Row="0"
+                Grid.Column="1"
+                Margin="5,0,5,0">
+                Name
+            </Label>
+            <TextBox
+                Grid.Row="1"
+                Grid.Column="1"
+                Margin="5,0,5,0"
+                Text="{Binding PlayerName.Value}" />
 
-            <Label Grid.Row="0" Grid.Column="2" Margin="5,0,5,0">Option</Label>
-            <ComboBox Grid.Row="1" Grid.Column="2" Margin="5,0,5,0">
-                <ComboBoxItem> </ComboBoxItem>
+            <Label
+                Grid.Row="0"
+                Grid.Column="2"
+                Margin="5,0,5,0">
+                Option
+            </Label>
+            <ComboBox
+                Grid.Row="1"
+                Grid.Column="2"
+                Margin="5,0,5,0">
+                <ComboBoxItem />
                 <ComboBoxItem>キャプテン</ComboBoxItem>
                 <ComboBoxItem>リベロ1</ComboBoxItem>
                 <ComboBoxItem>リベロ2</ComboBoxItem>
             </ComboBox>
-            
-            <Button Grid.Row="1" Grid.Column="3" VerticalAlignment="Center" Margin="5,0,5,0" Command="{Binding PlayerAddCommand}">追加</Button>
+
+            <Button
+                Grid.Row="1"
+                Grid.Column="3"
+                Margin="5,0,5,0"
+                VerticalAlignment="Center"
+                Command="{Binding PlayerAddCommand}">
+                追加
+            </Button>
 
         </Grid>
 
