--- a/VolleyballScoreSheet/Views/Rotation.xaml
+++ b/VolleyballScoreSheet/Views/Rotation.xaml
@@ -1,14 +1,13 @@
-﻿<UserControl x:Class="VolleyballScoreSheet.Views.Rotation"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:VolleyballScoreSheet.ViewModels"
-      xmlns:wpfui="clr-namespace:WPFUI.Controls;assembly=WPFUI"
-      xmlns:prism="http://prismlibrary.com/">
+﻿<UserControl
+    x:Class="VolleyballScoreSheet.Views.Rotation"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:VolleyballScoreSheet.ViewModels"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:prism="http://prismlibrary.com/">
 
     <StackPanel>
-        <wpfui:TitleBar ApplicationNavigation="True" />
         <StackPanel Margin="10">
 
             <Label Margin="5">スターティングラインナップを入力してください。</Label>
@@ -17,62 +16,131 @@
 
 
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
                 </Grid.RowDefinitions>
 
-                <TextBlock Margin="5" Grid.Column="0" Grid.Row="0" Text="{Binding ATeam.Value}"></TextBlock>
-                <TextBlock Margin="5" Grid.Column="1" Grid.Row="0" Text="{Binding BTeam.Value}"></TextBlock>
-                
-                <DataGrid Margin="5" Grid.Column="0" Grid.Row="1" ItemsSource="{Binding ATeamPlayer.Value}" IsReadOnly="True"></DataGrid>
-                <DataGrid Margin="5" Grid.Column="1" Grid.Row="1" ItemsSource="{Binding BTeamPlayer.Value}" IsReadOnly="True" ></DataGrid>
-                
-                
-                <Grid Grid.Column="0" Grid.Row="2">
+                <TextBlock
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Margin="5"
+                    Text="{Binding ATeamName.Value}" />
+                <TextBlock
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Margin="5"
+                    Text="{Binding BTeamName.Value}" />
+
+                <DataGrid
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Margin="5"
+                    IsReadOnly="True"
+                    ItemsSource="{Binding ATeamPlayer.Value}" />
+                <DataGrid
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Margin="5"
+                    IsReadOnly="True"
+                    ItemsSource="{Binding BTeamPlayer.Value}" />
+
+
+                <Grid Grid.Row="2" Grid.Column="0">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
+                        <RowDefinition />
+                        <RowDefinition />
                     </Grid.RowDefinitions>
-                    <wpfui:NumberBox Margin="5" Grid.Column="2" Grid.Row="1" Text="{Binding ATeamRotation.Value[0]}"></wpfui:NumberBox>
-                    <wpfui:NumberBox Margin="5" Grid.Column="2" Grid.Row="0" Text="{Binding ATeamRotation.Value[1]}"></wpfui:NumberBox>
-                    <wpfui:NumberBox Margin="5" Grid.Column="1" Grid.Row="0" Text="{Binding ATeamRotation.Value[2]}"></wpfui:NumberBox>
-                    <wpfui:NumberBox Margin="5" Grid.Column="0" Grid.Row="0" Text="{Binding ATeamRotation.Value[3]}"></wpfui:NumberBox>
-                    <wpfui:NumberBox Margin="5" Grid.Column="0" Grid.Row="1" Text="{Binding ATeamRotation.Value[4]}"></wpfui:NumberBox>
-                    <wpfui:NumberBox Margin="5" Grid.Column="1" Grid.Row="1" Text="{Binding ATeamRotation.Value[5]}"></wpfui:NumberBox>
+                    <TextBox
+                        Grid.Row="1"
+                        Grid.Column="2"
+                        Margin="5"
+                        Text="{Binding ATeamRotation.Value[0]}" />
+                    <TextBox
+                        Grid.Row="0"
+                        Grid.Column="2"
+                        Margin="5"
+                        Text="{Binding ATeamRotation.Value[1]}" />
+                    <TextBox
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        Margin="5"
+                        Text="{Binding ATeamRotation.Value[2]}" />
+                    <TextBox
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        Margin="5"
+                        Text="{Binding ATeamRotation.Value[3]}" />
+                    <TextBox
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        Margin="5"
+                        Text="{Binding ATeamRotation.Value[4]}" />
+                    <TextBox
+                        Grid.Row="1"
+                        Grid.Column="1"
+                        Margin="5"
+                        Text="{Binding ATeamRotation.Value[5]}" />
                 </Grid>
 
 
 
-                <Grid Grid.Column="1" Grid.Row="2">
+                <Grid Grid.Row="2" Grid.Column="1">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
+                        <RowDefinition />
+                        <RowDefinition />
                     </Grid.RowDefinitions>
-                    <wpfui:NumberBox Margin="5" Grid.Column="2" Grid.Row="1" Text="{Binding BTeamRotation.Value[0]}"></wpfui:NumberBox>
-                    <wpfui:NumberBox Margin="5" Grid.Column="2" Grid.Row="0" Text="{Binding BTeamRotation.Value[1]}"></wpfui:NumberBox>
-                    <wpfui:NumberBox Margin="5" Grid.Column="1" Grid.Row="0" Text="{Binding BTeamRotation.Value[2]}"></wpfui:NumberBox>
-                    <wpfui:NumberBox Margin="5" Grid.Column="0" Grid.Row="0" Text="{Binding BTeamRotation.Value[3]}"></wpfui:NumberBox>
-                    <wpfui:NumberBox Margin="5" Grid.Column="0" Grid.Row="1" Text="{Binding BTeamRotation.Value[4]}"></wpfui:NumberBox>
-                    <wpfui:NumberBox Margin="5" Grid.Column="1" Grid.Row="1" Text="{Binding BTeamRotation.Value[5]}"></wpfui:NumberBox>
+                    <TextBox
+                        Grid.Row="1"
+                        Grid.Column="2"
+                        Margin="5"
+                        Text="{Binding BTeamRotation.Value[0]}" />
+                    <TextBox
+                        Grid.Row="0"
+                        Grid.Column="2"
+                        Margin="5"
+                        Text="{Binding BTeamRotation.Value[1]}" />
+                    <TextBox
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        Margin="5"
+                        Text="{Binding BTeamRotation.Value[2]}" />
+                    <TextBox
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        Margin="5"
+                        Text="{Binding BTeamRotation.Value[3]}" />
+                    <TextBox
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        Margin="5"
+                        Text="{Binding BTeamRotation.Value[4]}" />
+                    <TextBox
+                        Grid.Row="1"
+                        Grid.Column="1"
+                        Margin="5"
+                        Text="{Binding BTeamRotation.Value[5]}" />
                 </Grid>
             </Grid>
-            <Button Content="次へ" Margin="5" Command="{Binding NextCommand}"></Button>
+            <Button
+                Margin="5"
+                Command="{Binding NextCommand}"
+                Content="次へ" />
         </StackPanel>
     </StackPanel>
 </UserControl>
