--- a/VolleyballScoreSheet/Views/Substitution.xaml
+++ b/VolleyballScoreSheet/Views/Substitution.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:VolleyballScoreSheet.Views"
              xmlns:prism="http://prismlibrary.com/"
-             xmlns:wpfui="clr-namespace:WPFUI.Controls;assembly=WPFUI"
+             xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors" 
              xmlns:rp="clr-namespace:Reactive.Bindings.Interactivity;assembly=ReactiveProperty.WPF"
              Height="300"
